--- a/.github/workflows/codecov-io.yml
+++ b/.github/workflows/codecov-io.yml
@@ -10,12 +10,14 @@ jobs:
     - uses: actions/checkout@v1
     - name: Install requirements
       run: pip install -r requirements.txt
-    - name: Run tests and collect coverage
-      run: pytest --cov .
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v3
+#    - name: Run tests and collect coverage
+#      run: pytest --cov .
     - name: Upload coverage reports to Codecov
       run: |
         # Replace `linux` below with the appropriate OS
         # Options are `alpine`, `linux`, `macos`, `windows`
-        curl -Os https://uploader.codecov.io/latest/linux/codecov
+        curl -Os https://uploader.codecov.io/latest/alpine/codecov
         chmod +x codecov
         ./codecov -t ${CODECOV_TOKEN}
